cmake_minimum_required(VERSION 3.29)
project(Spa4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Spa4 main.cpp Arrow.cpp Arrow.h Bat.cpp Bat.h Hazard.cpp Hazard.h MagicOrb.cpp MagicOrb.h main.cpp Map.h Map.cpp Pit.cpp Pit.h Player.cpp Player.h Room.cpp Room.h Trapdoor.cpp Trapdoor.h Weapon.cpp Weapon.h Wumpus.cpp Wumpus.h
        Player.h
        Player.h
        Point.h
        Point.cpp)
